--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "private": true,
   "scripts": {
     "start": "cross-env DEBUG=softtech-gallery-backend:* nodemon ./bin/www",
-    "test": "npm run lint",
-    "lint": "standard"
+    "test": "npm run lint && npm run test:unit",
+    "test:unit": "mocha",
+    "lint": "standard --env mocha"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -15,6 +16,7 @@
   },
   "devDependencies": {
     "cross-env": "^7.0.2",
+    "mocha": "^8.1.2",
     "nodemon": "^2.0.4",
     "standard": "^14.3.4"
   }
