--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cross-env": "^7.0.2",
     "mocha": "^8.1.2",
     "nodemon": "^2.0.4",
+    "nyc": "^15.1.0",
     "standard": "^14.3.4"
   }
 }
