--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "morgan": "~1.9.1"
   },
   "devDependencies": {
+    "chai": "^4.2.0",
     "cross-env": "^7.0.2",
     "mocha": "^8.1.2",
     "nodemon": "^2.0.4",
