--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "morgan": "~1.9.1",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "sinon": "^9.0.3"
   },
   "devDependencies": {
     "chai": "^4.2.0",
