--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "softtech-gallery-backend",
+  "name": "gallery-backend",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "cross-env DEBUG=softtech-gallery-backend:* nodemon ./bin/www",
+    "start": "cross-env DEBUG=gallery-backend:* nodemon ./bin/www",
     "test": "npm run lint && npm run test:unit",
     "test:unit": "mocha",
     "lint": "standard --env mocha"
